# controllers/formulario_programa.go
@@ -6,9 +6,7 @@ import (
 	"strings"
 
 	"github.com/astaxie/beego"
-	"github.com/fatih/structs"
 	"github.com/planesticud/forms_management_crud/models"
-	"github.com/udistrital/utils_oas/formatdata"
 )
 
 // FormularioProgramaController operations for FormularioPrograma
@@ -30,27 +28,25 @@ func (c *FormularioProgramaController) URLMapping() {
 // @Description create FormularioPrograma
 // @Param	body		body 	models.FormularioPrograma	true		"body for FormularioPrograma content"
 // @Success 201 {int} models.FormularioPrograma
-// @Failure 403 body is empty
+// @Failure 400 the request contains incorrect syntax
 // @router / [post]
 func (c *FormularioProgramaController) Post() {
 	var v models.FormularioPrograma
 	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
 		if _, err := models.AddFormularioPrograma(&v); err == nil {
 			c.Ctx.Output.SetStatus(201)
-			c.Data["json"] = models.Alert{Type: "success", Code: "S_201", Body: v}
-			//c.Ctx.Output.SetStatus(201)
-			//c.Data["json"] = v
+			c.Data["json"] = v
 		} else {
-			alertdb := structs.Map(err)
-			var code string
-			formatdata.FillStruct(alertdb["Code"], &code)
-			alert := models.Alert{Type: "error", Code: "E_" + code, Body: err.Error()}
-			c.Data["json"] = alert
-			//c.Data["json"] = err.Error()
+			beego.Error(err)
+			//c.Data["development"] = map[string]interface{}{"Code": "400", "Body": err.Error(), "Type": "error"}
+			c.Data["system"] = err
+			c.Abort("400")
 		}
 	} else {
-		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
-		//c.Data["json"] = err.Error()
+		beego.Error(err)
+		//c.Data["development"] = map[string]interface{}{"Code": "400", "Body": err.Error(), "Type": "error"}
+		c.Data["system"] = err
+		c.Abort("400")
 	}
 	c.ServeJSON()
 }
@@ -60,15 +56,17 @@ func (c *FormularioProgramaController) Post() {
 // @Description get FormularioPrograma by id
 // @Param	id		path 	string	true		"The key for staticblock"
 // @Success 200 {object} models.FormularioPrograma
-// @Failure 403 :id is empty
+// @Failure 404 not found resource
 // @router /:id [get]
 func (c *FormularioProgramaController) GetOne() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
 	v, err := models.GetFormularioProgramaById(id)
 	if err != nil {
-		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
-		//c.Data["json"] = err.Error()
+		beego.Error(err)
+		//c.Data["development"] = map[string]interface{}{"Code": "404", "Body": err.Error(), "Type": "error"}
+		c.Data["system"] = err
+		c.Abort("404")
 	} else {
 		c.Data["json"] = v
 	}
@@ -85,7 +83,7 @@ func (c *FormularioProgramaController) GetOne() {
 // @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
 // @Param	offset	query	string	false	"Start position of result set. Must be an integer"
 // @Success 200 {object} models.FormularioPrograma
-// @Failure 403
+// @Failure 404 not found resource
 // @router / [get]
 func (c *FormularioProgramaController) GetAll() {
 	var fields []string
@@ -121,7 +119,6 @@ func (c *FormularioProgramaController) GetAll() {
 			kv := strings.SplitN(cond, ":", 2)
 			if len(kv) != 2 {
 				c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: "Error: invalid query key/value pair"}
-				//c.Data["json"] = errors.New("Error: invalid query key/value pair")
 				c.ServeJSON()
 				return
 			}
@@ -132,9 +129,14 @@ func (c *FormularioProgramaController) GetAll() {
 
 	l, err := models.GetAllFormularioPrograma(query, fields, sortby, order, offset, limit)
 	if err != nil {
-		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
-		//c.Data["json"] = err.Error()
+		beego.Error(err)
+		//c.Data["development"] = map[string]interface{}{"Code": "404", "Body": err.Error(), "Type": "error"}
+		c.Data["system"] = err
+		c.Abort("404")
 	} else {
+		if l == nil {
+			l = append(l, map[string]interface{}{})
+		}
 		c.Data["json"] = l
 	}
 	c.ServeJSON()
@@ -146,7 +148,7 @@ func (c *FormularioProgramaController) GetAll() {
 // @Param	id		path 	string	true		"The id you want to update"
 // @Param	body		body 	models.FormularioPrograma	true		"body for FormularioPrograma content"
 // @Success 200 {object} models.FormularioPrograma
-// @Failure 403 :id is not int
+// @Failure 400 the request contains incorrect syntax
 // @router /:id [put]
 func (c *FormularioProgramaController) Put() {
 	idStr := c.Ctx.Input.Param(":id")
@@ -155,19 +157,18 @@ func (c *FormularioProgramaController) Put() {
 	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
 		if err := models.UpdateFormularioProgramaById(&v); err == nil {
 			c.Ctx.Output.SetStatus(200)
-			c.Data["json"] = models.Alert{Type: "success", Code: "S_200", Body: v}
-			//c.Data["json"] = "OK"
+			c.Data["json"] = v
 		} else {
-			alertdb := structs.Map(err)
-			var code string
-			formatdata.FillStruct(alertdb["Code"], &code)
-			alert := models.Alert{Type: "error", Code: "E_" + code, Body: err.Error()}
-			c.Data["json"] = alert
-			//c.Data["json"] = err.Error()
+			beego.Error(err)
+			//c.Data["development"] = map[string]interface{}{"Code": "400", "Body": err.Error(), "Type": "error"}
+			c.Data["System"] = err
+			c.Abort("400")
 		}
 	} else {
-		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
-		//c.Data["json"] = err.Error()
+		beego.Error(err)
+		//c.Data["development"] = map[string]interface{}{"Code": "400", "Body": err.Error(), "Type": "error"}
+		c.Data["System"] = err
+		c.Abort("400")
 	}
 	c.ServeJSON()
 }
@@ -177,17 +178,18 @@ func (c *FormularioProgramaController) Put() {
 // @Description delete the FormularioPrograma
 // @Param	id		path 	string	true		"The id you want to delete"
 // @Success 200 {string} delete success!
-// @Failure 403 id is empty
+// @Failure 404 not found resource
 // @router /:id [delete]
 func (c *FormularioProgramaController) Delete() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
 	if err := models.DeleteFormularioPrograma(id); err == nil {
-		c.Data["json"] = models.Alert{Type: "success", Code: "S_200", Body: "OK"}
-		//c.Data["json"] = "OK"
+		c.Data["json"] = map[string]interface{}{"Id": id}
 	} else {
-		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
-		//c.Data["json"] = err.Error()
+		beego.Error(err)
+		//c.Data["development"] = map[string]interface{}{"Code": "404", "Body": err.Error(), "Type": "error"}
+		c.Data["System"] = err
+		c.Abort("404")
 	}
 	c.ServeJSON()
 }
