# models/campo_programa.go
@@ -5,9 +5,9 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
-	"time"
 
 	"github.com/astaxie/beego/orm"
+	"github.com/udistrital/utils_oas/time_bogota"
 )
 
 type CampoPrograma struct {
@@ -17,6 +17,7 @@ type CampoPrograma struct {
 	TipoEstado         *TipoEstado         `orm:"column(tipo_estado);rel(fk)"`
 	FormularioPrograma *FormularioPrograma `orm:"column(formulario_programa);rel(fk)"`
 	Activo             bool                `orm:"column(activo)"`
+	FechaCreacion      string              `orm:"column(fecha_creacion);null"`
 	FechaModificacion  string              `orm:"column(fecha_modificacion);null"`
 }
 
@@ -31,9 +32,8 @@ func init() {
 // AddCampoPrograma insert a new CampoPrograma into database and returns
 // last inserted Id on success.
 func AddCampoPrograma(m *CampoPrograma) (id int64, err error) {
-	var t time.Time
-	t = time.Now()
-	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
+	m.FechaCreacion = time_bogota.TiempoBogotaFormato()
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -133,9 +133,7 @@ func GetAllCampoPrograma(query map[string]string, fields []string, sortby []stri
 func UpdateCampoProgramaById(m *CampoPrograma) (err error) {
 	o := orm.NewOrm()
 	v := CampoPrograma{Id: m.Id}
-	var t time.Time
-	t = time.Now()
-	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
